@@ -1,4 +1,5 @@
 0.8.3:
+  - Shared set support and examples (beta feature).
 
 0.8.2:
   - Support and examples for v201302.
